feat: Add configurations options for HikariCP (PostgreSQL connection pool). Limit maximum connection time to 5minutes. Add HikariCP metrics collection.